Fixed Russian text shift

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -5,6 +5,10 @@
   height: 150px;
 }
 
+.list-post-title {
+    width: 150px;
+}
+
 .people {
   margin: auto;
   text-align: center;
